# python-kevat-2022

./: README.md
koodi/viikko1/nhl-statistics-1/: pyproject.toml
koodi/viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics.py
koodi/viikko1/riippuvuuksien-injektointi-1/: pyproject.toml
koodi/viikko1/varasto/: pyproject.toml
koodi/viikko3/hello-robot/: pyproject.toml
koodi/viikko3/login-robot/: pyproject.toml
koodi/viikko3/web-login-robot/: pyproject.toml
koodi/viikko4/int-joukko/: pyproject.toml
koodi/viikko4/maksukortti-mock/: pyproject.toml
koodi/viikko4/mock-demo/: pyproject.toml
koodi/viikko4/tdd-ostoskori/: pyproject.toml
koodi/viikko4/verkkokauppa/: pyproject.toml
koodi/viikko5/tennis/: pyproject.toml
